--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title></title>
+        <title>Home</title>
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="estilo.css">
     </head>
